[gd_scene load_steps=8 format=3 uid="uid://dehfwsitxp0a6"]

[ext_resource type="StyleBox" uid="uid://bexrdmx650haa" path="res://Styles/panel.tres" id="1_17wi2"]
[ext_resource type="Script" path="res://Scripts/menus/win_menu.gd" id="1_22jkf"]
[ext_resource type="PackedScene" uid="uid://b4gt65xd5xb3n" path="res://Scenes/Menus/amulet_icon_template.tscn" id="2_rspx6"]
[ext_resource type="StyleBox" uid="uid://sr3rv6n41wdu" path="res://Styles/transparent_button.tres" id="4_ld0py"]
[ext_resource type="StyleBox" uid="uid://bagr45t17aie2" path="res://Styles/button_hover_blue.tres" id="5_uikpp"]
[ext_resource type="StyleBox" uid="uid://cerythqxamdxh" path="res://Styles/button_hover_yellow.tres" id="6_4dsik"]
[ext_resource type="StyleBox" uid="uid://d2bmcyyj3mhkh" path="res://Styles/button_hover.tres" id="6_oo53p"]

[node name="WinMenu" type="Control" node_paths=PackedStringArray("score", "win_type_label", "win_type_amulets_label", "new_amulet_count_label", "amulets_container")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22jkf")
score = NodePath("Panel/MarginContainer/VBoxContainer/HBoxContainer2/FinalScore")
win_type_label = NodePath("Panel/MarginContainer/VBoxContainer/YouWin")
win_type_amulets_label = NodePath("Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/WinTypeAmulets")
amulet_prefab = ExtResource("2_rspx6")
new_amulet_count_label = NodePath("Panel/MarginContainer/VBoxContainer/ProgressCount")
amulets_container = NodePath("Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -455.0
offset_top = -261.5
offset_right = 455.0
offset_bottom = 261.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = ExtResource("1_17wi2")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.000488281
offset_bottom = 1.99951
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="YouWin" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][wave][color=#FF6347]Y[/color][color=#FF4500]o[/color][color=#D1DA00]u[/color] [color=#32CD32]w[/color][color=#FFD700]i[/color][color=#1E90FF]n[/color] [/wave][color=#555555]by[/color] [color=aqua][shake]"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
alignment = 1

[node name="FinalScore" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Final Score:[/center] [color=red]"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="WinTypeAmulets" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
theme_override_font_sizes/normal_font_size = 42
bbcode_enabled = true
text = "[center]Repair Amulets:[/center]"
scroll_active = false

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 4

[node name="ProgressCount" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
z_index = 30
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true

[node name="ProgressButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ProgressCount"]
z_as_relative = false
layout_mode = 2
offset_top = 3.0
offset_right = 860.0
offset_bottom = 55.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("4_ld0py")
theme_override_styles/hover = ExtResource("6_4dsik")
theme_override_styles/focus = ExtResource("6_oo53p")

[node name="MainMenuButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("4_ld0py")
theme_override_styles/hover = ExtResource("5_uikpp")
theme_override_styles/pressed = ExtResource("5_uikpp")
theme_override_styles/focus = ExtResource("5_uikpp")
text = "Back to main menu"

[connection signal="ready" from="Panel/MarginContainer/VBoxContainer/ProgressCount" to="." method="_on_rich_text_label_ready"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ProgressCount/ProgressButton" to="." method="_on_progress_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
